vinculacion al front exitosa para el login y el registro

--- a/src/public/pages/iniciosesion.html
+++ b/src/public/pages/iniciosesion.html
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 <html lang="es">
 <head>
     <meta charset="UTF-8">
@@ -19,8 +18,7 @@
     </header>
     <main id="main" class="main">
         <section data-aos="zoom-in" data-aos-duration="1000" class="seccionRegistrarse">
-            <!--pongo get ya que en github pages da error el method post-->
-            <form action="" method="get">
+            <form id="login-form">
                 <h2 class="tituloRegistrarse">Iniciar Sesión</h2>
                 <div>
                     <input type="email" placeholder="Email" id="email" name="email">
