--- a/src/public/pages/registrarse.html
+++ b/src/public/pages/registrarse.html
@@ -19,42 +19,18 @@
     </header>
     <main id="main" class="main">
         <section data-aos="zoom-in" data-aos-duration="1000" class="seccionRegistrarse">
-            <form action="" method="get">
+            <form id="registroForm">
                 <h2 class="tituloRegistrarse">Registro</h2>
                 <div>
-                    <input type="text" placeholder="Nombre"  id="nombre" name="nombre">
+                    <input type="text" placeholder="Nombre" id="nombre" name="nombre">
                     <div class="error-text"></div>
                 </div>
                 <div>
-                    <input type="text" placeholder="Apellido"  id="apellido" name="apellido">
+                    <input type="email" placeholder="Email" id="email" name="email">
                     <div class="error-text"></div>
                 </div>
                 <div>
-                    <input type="email" placeholder="Email"  id="email" name="email">
-                    <div class="error-text"></div>
-                </div>
-                <div>
-                    <input type="password" placeholder="Contraseña"  id="password" name="password">
-                    <div class="error-text"></div>
-                </div>
-                <div>
-                    <input type="date" placeholder="Fecha de Nacimiento (dd/mm/aaaa)"  id="fechaNacimiento" name="fechaNacimiento">
-                    <div class="error-text"></div>
-                </div>
-                <div>
-                    <select name="pais" id="pais">
-                        <option value="">País</option>
-                        <option value="AR">Argentina</option>
-                        <option value="BO">Bolivia</option>
-                        <option value="BR">Brasil</option>
-                        <option value="CH">Chile</option>
-                        <option value="CO">Colombia</option>
-                        <option value="EC">Ecuador</option>
-                        <option value="PY">Paraguay</option>
-                        <option value="PE">Perú</option>
-                        <option value="UY">Uruguay</option>
-                        <option value="VE">Venezuela</option>
-                    </select>
+                    <input type="password" placeholder="Contraseña" id="password" name="password">
                     <div class="error-text"></div>
                 </div>
                 <div class="terminos">
@@ -63,7 +39,7 @@
                     <div class="error-text"></div>
                 </div>
                 <div>
-                    <input class="boton" type="submit" value="Registrarse">
+                    <button type="submit" class="boton">Registrarse</button>
                 </div>
                 <div>
                     <a class="ayuda" href="#">Necesitas ayuda?</a>
