--- a/src/public/index.html
+++ b/src/public/index.html
@@ -19,8 +19,8 @@
             </a>
             <ul class="listaNav">
                 <li class="listaItem"><a class="linkNav" href="#tendencias">Tendencias</a></li>
-                <li class="listaItem"><a class="linkNav" href="./pages/registrarse.html">Registrarse</a></li>
-                <li class="listaItem"><a class="linkNav iniciarSesion" href="./pages/iniciosesion.html">Iniciar Sesión</a></li>
+                <li class="listaItem"><a id="registrarse" class="linkNav" href="./pages/registrarse.html">Registrarse</a></li>
+                <li class="listaItem"><a id="iniciarSesion" class="linkNav iniciarSesion" href="./pages/iniciosesion.html">Iniciar Sesión</a></li>
             </ul>
         </nav>
     </header>
@@ -60,7 +60,7 @@
                 <li class="listaItem"><a class="linkNav" href="">Términos y condiciones</a></li>
                 <li class="listaItem"><a class="linkNav" href="">Preguntas frecuentes</a></li>
                 <li class="listaItem"><a class="linkNav" href="">Ayuda</a></li>
-                <li class="listaItem"><a class="linkNav administradorPeliculas" href="">Administrador Peliculas</a></li>
+                <li class="listaItem"><a id="adminPeliculas" class="linkNav administradorPeliculas" href="">Administrador Peliculas</a></li>
             </ul>
         </nav>
         <a href="#main" class="flechaArriba">
@@ -75,7 +75,6 @@
     </script>
     <!--script que trae peliculas de un servidor de tercero y crea cada pelicula en el dom-->
     <script src="./js/cargar_peliculas_index.js"></script>
+    <script src="./js/verificar_usuario.js"></script>
 </body>
 </html>
-
-
