arreglos en el form y carga de peliculas

--- a/src/public/pages/cargar_pelicula.html
+++ b/src/public/pages/cargar_pelicula.html
@@ -19,7 +19,7 @@
     </header>
     <main id="main" class="main">
         <section data-aos="zoom-in" data-aos-duration="1000" class="seccionRegistrarse">
-            <form id="formCargarPelicula" action="/api/movies/movies" method="post" enctype="multipart/form-data">
+            <form id="formCargarPelicula" action="/api/movies/movies" method="post">
                 <h2 class="tituloRegistrarse">Cargar Película</h2>
                 <div>
                     <input type="text" placeholder="Título" id="titulo" name="titulo">
